regex dates validation

--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -63,7 +63,7 @@
     "    validate_values('PRESERVATIVE_SOLUTION', df, valid_dict)\n",
     "    # columns below validated for non-blank samples only\n",
     "    validate_values('BOTTLE_DIRECTION', df[~is_blank], valid_dict) # TODO allow for blank in non-Malaise trap samples\n",
-    "    date_coll = validate_date('DATE_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED'])\n",
+    "    validate_regex('DATE_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED'])\n",
     "    validate_regex('DECIMAL_LATITUDE', df[~is_blank], na_values=[])\n",
     "    validate_regex('DECIMAL_LONGITUDE', df[~is_blank], na_values=[])\n",
     "    # COUNTRY_OF_COLLECTION, DECIMAL_LATITUDE, DECIMAL_LONGITUDE\n",
@@ -75,8 +75,8 @@
     "    validate_regex('TIME_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
     "    validate_regex('DURATION_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
     "    validate_values('COLLECTION_METHOD', df[~is_blank], valid_dict)\n",
-    "    date_plat = validate_date('DATE_OF_PLATING', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
-    "    compare_dates(before=date_coll, after=date_plat)\n",
+    "    validate_regex('DATE_OF_PLATING', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
+    "    compare_dates_text('DATE_OF_COLLECTION', 'DATE_OF_PLATING', df[~is_blank])\n",
     "    # taxonomy validation adds taxid columns to original dataframe - skipping for now\n",
     "    df = validate_taxonomy(df, ncbi, anospp=False, na_values = [''])\n",
     "    validate_values('SPECIMEN_IDENTITY_RISK', df[~is_blank], valid_dict, na_values=[''])\n",
@@ -151,14 +151,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fn = '../results/20230728_js_batch2/[NENM]_[2307]_BIOSCAN_Manifest_V2.0.xlsx'\n",
+    "fn = '../results/20230802_js_batch4/NBGW-2023-Manifest.xlsx'\n",
     "df = validate_bioscan(fn, samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors', verbose=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c9457a5",
+   "id": "3f3e442e",
    "metadata": {},
    "outputs": [],
    "source": []
