--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -70,7 +70,7 @@
     "    validate_values('PRESERVATIVE_SOLUTION', df, valid_dict)\n",
     "    validate_values('ORGANISM_PART', df, valid_dict, sep='|')\n",
     "    # columns below validated for non-blank samples only\n",
-    "    date_coll = validate_date('DATE_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
+    "    validate_regex('DATE_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
     "    validate_regex('DECIMAL_LATITUDE', df[~is_blank])\n",
     "    validate_regex('DECIMAL_LONGITUDE', df[~is_blank])\n",
     "    # COLLECTION_COUNTRY, DECIMAL_LATITUDE, DECIMAL_LONGITUDE\n",
@@ -96,8 +96,8 @@
     "    validate_values('BLOOD_MEAL', df, valid_dict, na_values=[''])\n",
     "    validate_values('GRAVIDITY', df, valid_dict, na_values=[''])\n",
     "    validate_freetext('HABITAT', df)\n",
-    "    date_pres = validate_date('DATE_OF_PRESERVATION', df, na_values=['']) # allow for empty values unlike DATE_OF_COLLECTION\n",
-    "    compare_dates(before=date_coll, after=date_pres)\n",
+    "    validate_regex('DATE_OF_PRESERVATION', df, na_values=['']) # allow for empty values unlike DATE_OF_COLLECTION\n",
+    "    compare_dates_text('DATE_OF_COLLECTION', 'DATE_OF_PLATING', df[~is_blank])\n",
     "    validate_regex('ELEVATION', df, na_values=[''])\n",
     "    validate_regex('WHAT_3_WORDS', df[~is_blank], na_values=[''])\n",
     "    validate_freetext('OTHER_ORGANISMS', df)\n",
