enable sts manifest writing for anospp

--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "def validate_anospp(fn, template_fn='../data/Anopheles_Metadata_Manifest_V4.0_20221220.xlsx', \n",
     "                    verbose=False, samples_sheet='TAB 2 Metadata Entry',\n",
-    "                    contrib_sheet='TAB 1 Contributors'):\n",
+    "                    contrib_sheet='TAB 1 Contributors', write_sts=True):\n",
     "    '''\n",
     "    ANOSPP partner manifest validation\n",
     "    Validation follows the order of columns order in data entry sheet\n",
@@ -110,6 +110,10 @@
     "    validate_regex('DNA_EXTRACT_CONCENTRATION', df, na_values=[''])\n",
     "            \n",
     "    logging.info('# ended validate_anospp_partner_manifest_v.{}'.format(ANOSPP_VERSION))\n",
+    "    \n",
+    "    df = add_sts_cols(df, contrib_df, gal, bioscan=False, v='NA')\n",
+    "    if write_sts:\n",
+    "        write_sts_manifest(df, fn, VALIDATION_VERSION)\n",
     "\n",
     "    # TODO yield table ready for STS submission\n",
     "    return df\n",
