--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -102,7 +102,7 @@
     "    # IDENTIFIER_AFFILIATION not checked\n",
     "    \n",
     "    df = expand_plate_only(df)\n",
-    "    df = add_sts_cols(df, contrib_df, gal, v)\n",
+    "    df = add_sts_cols(df, contrib_df, gal, bioscan=True, v=v)\n",
     "    if write_sts:\n",
     "        write_sts_manifest(df, fn, VALIDATION_VERSION)\n",
     "        \n",
