--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -1083,7 +1083,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_sts_cols(df, contrib_df, gal, v, bioscan=True):\n",
+    "def add_sts_cols(df, contrib_df, gal, bioscan=True, v='v2'):\n",
     "    \n",
     "    logging.debug('adding STS columns to manifest')\n",
     "    \n",
@@ -1101,7 +1101,7 @@
     "    df['SYMBIONT'] = 'TARGET'\n",
     "    df['REGULATORY_COMPLIANCE'] = 'Y'\n",
     "    df['HAZARD_GROUP'] = 'HG1'\n",
-    "    if v == 'v2':\n",
+    "    if bioscan and v == 'v2':\n",
     "        logging.info('auto-filling CATCH_SOLUTION and AMOUNT_OF_CATCH_PLATED columns for bioscan manifest v2')\n",
     "        df['CATCH_SOLUTION'] = '100%_ETHANOL'\n",
     "        df['AMOUNT_OF_CATCH_PLATED'] = 'ALL_SPECIMENS_PLATED'\n",
