anospp fix, date fix

--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -97,7 +97,7 @@
     "    validate_values('GRAVIDITY', df, valid_dict, na_values=[''])\n",
     "    validate_freetext('HABITAT', df)\n",
     "    validate_regex('DATE_OF_PRESERVATION', df, na_values=['']) # allow for empty values unlike DATE_OF_COLLECTION\n",
-    "    compare_dates_text('DATE_OF_COLLECTION', 'DATE_OF_PLATING', df[~is_blank])\n",
+    "    compare_dates_text('DATE_OF_COLLECTION', 'DATE_OF_PRESERVATION', df[~is_blank])\n",
     "    validate_regex('ELEVATION', df, na_values=[''])\n",
     "    validate_regex('WHAT_3_WORDS', df[~is_blank], na_values=[''])\n",
     "    validate_freetext('OTHER_ORGANISMS', df)\n",
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f526ee2d",
+   "id": "520423bd",
    "metadata": {},
    "outputs": [],
    "source": []
