--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -115,7 +115,7 @@
     "    \n",
     "    for col in ['DATE_OF_COLLECTION', 'DATE_OF_PLATING', 'DATE_OF_PRESERVATION']:\n",
     "        if col in df.columns:\n",
-    "            df[col] = df[col].str.strip(' 00:00:00')\n",
+    "            df[col] = df[col].str.replace(r' 00:00:00$','')\n",
     "            \n",
     "    return df"
    ]
