identifier matching in contributors

--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "VALIDATION_VERSION = '0.2.0'\n",
+    "VALIDATION_VERSION = '0.2.0dev'\n",
     "ANOSPP_VERSION = '4.0'\n",
     "BIOSCAN_VERSION = '3.0'"
    ]
@@ -1056,6 +1056,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def validate_identifier(col, df, contrib_df, na_values=['']):\n",
+    "    \n",
+    "    if col not in df.columns:\n",
+    "        logging.error(f'{col} column not found in manifest')\n",
+    "        return\n",
+    "    series = df[col]\n",
+    "    series = exclude_missing(series, na_values)\n",
+    "    \n",
+    "    for person in series.unique():\n",
+    "        if not (person in contrib_df['FULL_NAME']):\n",
+    "            s = index_ranges(series[series == person])\n",
+    "            \n",
+    "            logging.warning(f'{col} column, SERIES {s}: \"{person}\" identifier information not found in '\n",
+    "                            f'contributors sheet, expected full name as \"Charles R. Darwin\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def validate_freetext(col, df, na_values=['']):\n",
     "    \n",
     "    logging.debug(f'validating freetext field characters in {col} column')\n",
@@ -1105,7 +1127,6 @@
     "        logging.info('auto-filling CATCH_SOLUTION and AMOUNT_OF_CATCH_PLATED columns for bioscan manifest v2')\n",
     "        df['CATCH_SOLUTION'] = '100%_ETHANOL'\n",
     "        df['AMOUNT_OF_CATCH_PLATED'] = 'ALL_SPECIMENS_PLATED'\n",
-    "        logging.info('dropping IDENTIFIER_AFFILIATION column for bioscan manifest v2')\n",
     "        if (df['IDENTIFIER_AFFILIATION'] != '').any():\n",
     "            logging.warning('IDENTIFIER_AFFILIATION has some data filled in - '\n",
     "                            'note this column will be removed from output')\n",
