small fixes upon v2-v3 batch conversion

--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -47,7 +47,7 @@
     "    \n",
     "    # prepare for validation\n",
     "    template_df = get_data(template_fn, sheet='TAB 2 Metadata Entry')\n",
-    "    check_columns(df, template_df)\n",
+    "    check_columns(df, template_df, bioscan_version=v)\n",
     "    valid_dict = get_valid_dict(template_fn, validation_sheet='TAB 4 DO NOT EDIT - Data Valida')\n",
     "    contrib_df = validate_contributors(fn, contrib_sheet=contrib_sheet)\n",
     "\n",
@@ -74,7 +74,7 @@
     "    validate_regex('WHAT_3_WORDS', df[~is_blank], na_values=[''])\n",
     "    validate_regex('TIME_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
     "    validate_regex('DURATION_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
-    "    validate_values('COLLECTION_METHOD', df[~is_blank], valid_dict)\n",
+    "    validate_values('COLLECTION_METHOD', df[~is_blank], valid_dict, na_values=[''])\n",
     "    validate_regex('DATE_OF_PLATING', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
     "    compare_dates_text('DATE_OF_COLLECTION', 'DATE_OF_PLATING', df[~is_blank])\n",
     "    # taxonomy validation adds taxid columns to original dataframe - skipping for now\n",
@@ -98,15 +98,16 @@
     "    validate_regex('ELEVATION', df, na_values=[''])\n",
     "    validate_freetext('OTHER_INFORMATION', df)\n",
     "    validate_freetext('MISC_METADATA', df)\n",
-    "    # IDENTIFIED_BY not checked\n",
-    "    # IDENTIFIER_AFFILIATION not checked\n",
+    "    validate_identifier('IDENTIFIED_BY', df, contrib_df, na_values=[''])\n",
     "    \n",
     "    df = expand_plate_only(df)\n",
     "    df = add_sts_cols(df, contrib_df, gal, bioscan=True, v=v)\n",
     "    if write_sts:\n",
     "        write_sts_manifest(df, fn, VALIDATION_VERSION)\n",
     "        \n",
-    "    logging.info('# ended validate_bioscan_partner_manifest_v.{}'.format(BIOSCAN_VERSION))\n",
+    "    logging.info('# ended validation of bioscan partner manifest v.{}'.format(BIOSCAN_VERSION))\n",
+    "    \n",
+    "    print('\\n'.join(df.RACK_OR_PLATE_ID.unique()))\n",
     "\n",
     "    return df"
    ]
@@ -158,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f3e442e",
+   "id": "22d81bf3",
    "metadata": {},
    "outputs": [],
    "source": []
