--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -263,12 +263,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def check_columns(df, template_df):\n",
+    "def check_columns(df, template_df, bioscan_version='v2'):\n",
     "    \n",
     "    logging.debug('checking manifest columns against template')\n",
     "    \n",
     "    data_cols = set(df.columns)\n",
     "    template_cols = set(template_df.columns)\n",
+    "    \n",
+    "    # while template is v2, we need to adjust columns to match v3\n",
+    "    if bioscan_version == 'v3':\n",
+    "        template_cols.update(['CATCH_SOLUTION', 'AMOUNT_OF_CATCH_PLATED'])\n",
+    "        template_cols.remove('IDENTIFIER_AFFILIATION')\n",
     "        \n",
     "    if data_cols - template_cols != set():\n",
     "        logging.info(f'extra columns in filled manifest compared to template: {data_cols - template_cols}')\n",
@@ -394,7 +399,7 @@
     "    numeric_regex = r'^[-+]?\\d*\\.?\\d+$'\n",
     "    \n",
     "    regexs = {\n",
-    "        'CATCH_LOT': (r'^C\\d{3}[A-Z]$', \n",
+    "        'CATCH_LOT': (r'^C\\d{3}[A-Z]$|^NOT_APPLICABLE$', \n",
     "                      'like C123A'),\n",
     "        'DATE_OF_COLLECTION': (date_regex, 'in YYYY-MM-DD format'),\n",
     "        'DECIMAL_LATITUDE': (r'^[-+]?([0-8]\\d|\\d)(\\.\\d+)?$', \n",
@@ -462,7 +467,7 @@
     "        possible_partner_codes = plate_prefixes.value_counts().index.to_list()\n",
     "        if len(possible_partner_codes) > 1:\n",
     "            logging.error(f'only one plate ID prefix expected, found multiple: {possible_partner_codes}')\n",
-    "        selected_partner_code = possible_partner_codes[0]\n",
+    "        selected_partner_code = possible_partner_codes[-1]\n",
     "        selected_partner_df = partners_df.query(f'partner_code == \"{selected_partner_code}\"')\n",
     "        if selected_partner_df.shape[0] == 0:\n",
     "            logging.error(f'partner code {selected_partner_code} not found in {bioscan_partners_fn}, '\n",
@@ -528,7 +533,7 @@
     "    expected_wells = [r + str(c) for (c,r) in itertools.product(col_id, row_id)]\n",
     "    \n",
     "    blank_wells = {\n",
-    "        'PLATE_ONLY':['H12'], # v2\n",
+    "        'PLATE_ONLY':['G12','H12'], # v2\n",
     "        'PLATE_ONLY_1_BLANK':['H12'], # v3\n",
     "        'PLATE_ONLY_2_BLANKS':['G12','H12'], # v3\n",
     "    }\n",
@@ -611,7 +616,7 @@
     "            \n",
     "    \n",
     "    logging.info(f'{is_blank.sum()} blanks located across {df.RACK_OR_PLATE_ID.nunique()} plates, '\n",
-    "                 f'{non_blank_df.shape[0]} samples of {df.shape[0]} left for downstream analysis')\n",
+    "                 f'{non_blank_df.shape[0]} non-blank samples will be further validated')\n",
     "    \n",
     "    \n",
     "    return is_blank\n",
@@ -1064,12 +1069,14 @@
     "    series = df[col]\n",
     "    series = exclude_missing(series, na_values)\n",
     "    \n",
+    "    expected_people = contrib_df['FULL_NAME'].to_list()\n",
+    "    \n",
     "    for person in series.unique():\n",
-    "        if not (person in contrib_df['FULL_NAME']):\n",
+    "        if not (person in expected_people):\n",
     "            s = index_ranges(series[series == person])\n",
     "            \n",
-    "            logging.warning(f'{col} column, SERIES {s}: \"{person}\" identifier information not found in '\n",
-    "                            f'contributors sheet, expected full name as \"Charles R. Darwin\"')"
+    "            logging.warning(f'{col} column, SERIES {s}: \"{person}\" not found in '\n",
+    "                            f'contributors sheet among {expected_people}')"
    ]
   },
   {
