anospp minor fixes

--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -1146,10 +1146,11 @@
     "        contrib_df['CONTRIBUTION']\n",
     "    df['CONTRIBUTORS'] = '|'.join(list(contrib_series))\n",
     "    \n",
-    "    logging.info('dropping MISC_METADATA column')\n",
-    "    if (df['MISC_METADATA'] != '').any():\n",
-    "        logging.warning('MISC_METADATA has some data filled in - note this column will be removed from output')\n",
-    "    df = df.drop(columns=['MISC_METADATA'])\n",
+    "    if 'MISC_METADATA' in df.columns:\n",
+    "        logging.info('dropping MISC_METADATA column')\n",
+    "        if (df['MISC_METADATA'] != '').any():\n",
+    "            logging.warning('MISC_METADATA has some data filled in - note this column will be removed from output')\n",
+    "        df = df.drop(columns=['MISC_METADATA'])\n",
     "    \n",
     "    return df\n",
     "\n",
