move empty rows removal to series validation, make misc metadata column optional

--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -104,7 +104,9 @@
     "    validate_freetext('BIOASSAYS', df)\n",
     "    validate_freetext('COLLECTOR_SAMPLE_ID', df)\n",
     "    validate_freetext('OTHER_INFORMATION', df)\n",
-    "    validate_freetext('MISC_METADATA', df)\n",
+    "    # MISC_METADATA can be removed safely\n",
+    "    if 'MISC_METADATA' in df.columns:\n",
+    "        validate_freetext('MISC_METADATA', df)\n",
     "    validate_freetext('DNA_EXTRACTION_DESCRIPTION', df)\n",
     "    validate_regex('DNA_EXTRACT_VOLUME_PROVIDED', df, na_values=[''])\n",
     "    validate_regex('DNA_EXTRACT_CONCENTRATION', df, na_values=[''])\n",
@@ -158,8 +160,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fn = '../results/20230725_aydi_akje_re/Manifest-MADAGASCAR  2023 II.xlsx'\n",
-    "df = validate_anospp(fn, template_fn, samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributor')"
+    "fn = '../results/20230814_olaitan_2_re_re/Anopheles_Metadata_Manifest_V4.0_EKUW - 14.08.2023 - antivec samples.xlsx'\n",
+    "df = validate_anospp(fn, template_fn, samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors')"
    ]
   },
   {
