--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -169,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def validate_series(df):\n",
+    "def validate_series(df, plate_col='RACK_OR_PLATE_ID', well_col='TUBE_OR_WELL_ID'):\n",
     "    \n",
     "    # series should be 1,2, ..., nsamples\n",
     "    logging.debug('validating SERIES column')\n",
@@ -185,6 +185,12 @@
     "                      f'{df.index[~series_numeric].to_list()} - '\n",
     "                      f'these will be excluded from validation and output')\n",
     "        df = df.loc[series_numeric]\n",
+    "    \n",
+    "    # exclude empty rows based on empty \n",
+    "    empty_rows = (df[plate_col] == '') | (df[well_col] == '')\n",
+    "    if empty_rows.any():\n",
+    "        logging.info(f'found and excluded {empty_rows.sum()} rows because {plate_col} or {well_col} is empty')\n",
+    "        df = df.loc[~empty_rows]\n",
     "        \n",
     "    # check the remaining SERIES are continuous\n",
     "    expected_series = set([str(i) for i in range(1, df.shape[0] + 1)])\n",
@@ -263,12 +269,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def check_columns(df, template_df, bioscan_version='v2'):\n",
+    "def check_columns(df, template_df, bioscan_version='v2', optional_columns=['MISC_METADATA']):\n",
     "    \n",
     "    logging.debug('checking manifest columns against template')\n",
     "    \n",
     "    data_cols = set(df.columns)\n",
     "    template_cols = set(template_df.columns)\n",
+    "    optional_cols = set(optional_columns)\n",
     "    \n",
     "    # while template is v2, we need to adjust columns to match v3\n",
     "    if bioscan_version == 'v3':\n",
@@ -277,7 +284,8 @@
     "        \n",
     "    if data_cols - template_cols != set():\n",
     "        logging.info(f'extra columns in filled manifest compared to template: {data_cols - template_cols}')\n",
-    "    if template_cols - data_cols != set():\n",
+    "    # do not report missing optional columns\n",
+    "    if template_cols - data_cols - optional_cols != set():\n",
     "        logging.error(f'template columns missing from filled manifest: {template_cols - data_cols}')\n",
     "\n",
     "# check_columns(df, template_df)"
@@ -444,11 +452,6 @@
     "    \n",
     "    # expect only complete 96-well plates\n",
     "    logging.debug(f'validating {plate_col} and {well_col} columns')\n",
-    "    \n",
-    "    empty_rows = (df[plate_col] == '') | (df[well_col] == '')\n",
-    "    if empty_rows.any():\n",
-    "        logging.info(f'found and excluded {empty_rows.sum()} empty rows based on {plate_col} and {well_col}')\n",
-    "        df = df.loc[~empty_rows]\n",
     "        \n",
     "    # plate names validation\n",
     "    plates = df[plate_col].drop_duplicates()\n",
