bioscan template v2 to v3, strip asterisks from dict fields

--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def validate_bioscan(fn, template_fn='../data/BIOSCAN_Manifest_V2.0_20230727.xlsx', \n",
+    "def validate_bioscan(fn, template_fn='../data/BIOSCAN_Manifest_V3_20230818.xlsx', \n",
     "                     samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors', \n",
     "                     verbose=False, write_sts=True):\n",
     "    '''\n",
@@ -60,8 +60,13 @@
     "        logging.error('no non-blank samples to validate, terminating')\n",
     "        return df\n",
     "    validate_values('ORGANISM_PART', df, valid_dict, sep='|')\n",
+    "    df = strip_asterisks('ORGANISM_PART', df)\n",
     "    validate_values('PRESERVATIVE_SOLUTION', df, valid_dict)\n",
+    "    df = strip_asterisks('PRESERVATIVE_SOLUTION', df)\n",
     "    # columns below validated for non-blank samples only\n",
+    "    if v == 'v3':\n",
+    "        validate_values('CATCH_SOLUTION', df[~is_blank], valid_dict)\n",
+    "        df = strip_asterisks('CATCH_SOLUTION', df)\n",
     "    validate_values('BOTTLE_DIRECTION', df[~is_blank], valid_dict) # TODO allow for blank in non-Malaise trap samples\n",
     "    validate_regex('DATE_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED'])\n",
     "    validate_regex('DECIMAL_LATITUDE', df[~is_blank], na_values=[])\n",
@@ -75,6 +80,7 @@
     "    validate_regex('TIME_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
     "    validate_regex('DURATION_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
     "    validate_values('COLLECTION_METHOD', df[~is_blank], valid_dict, na_values=[''])\n",
+    "    df = strip_asterisks('COLLECTION_METHOD', df)\n",
     "    validate_regex('DATE_OF_PLATING', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
     "    compare_dates_text('DATE_OF_COLLECTION', 'DATE_OF_PLATING', df[~is_blank])\n",
     "    # taxonomy validation adds taxid columns to original dataframe - skipping for now\n",
@@ -86,7 +92,8 @@
     "    validate_values('SORTING_SOLUTION_USED', df[~is_blank], valid_dict, na_values=[''])\n",
     "    validate_values('CATCH_BOTTLE_TEMPERATURE_STORAGE', df[~is_blank], valid_dict, na_values=[''])\n",
     "    validate_values('PLATE_TEMPERATURE_STORAGE', df[~is_blank], valid_dict, na_values=[''])\n",
-    "    \n",
+    "    if v == 'v3':\n",
+    "        validate_values('AMOUNT_OF_CATCH_PLATED', df[~is_blank], valid_dict)\n",
     "    # white cols - validated for all samples\n",
     "    validate_freetext('MORPHOSPECIES_DESCRIPTION', df)\n",
     "    validate_freetext('DESCRIPTION_OF_COLLECTION_METHOD', df)\n",
@@ -115,15 +122,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "230f6339",
+   "id": "c9b0c5c4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# fn = '../../results/partner_manifests/IRD-Neandersquito_T222Amplicon_Manifest_V2.0.xlsx'\n",
-    "df = validate_bioscan(fn='../data/BIOSCAN_Manifest_V2.0_20230727.xlsx', \n",
-    "                      template_fn='../data/BIOSCAN_Manifest_V2.0_20230727.xlsx', \n",
+    "df = validate_bioscan(fn='../data/BIOSCAN_Manifest_V3_20230818.xlsx', \n",
+    "                      template_fn='../data/BIOSCAN_Manifest_V3_20230818.xlsx', \n",
     "                      verbose=False,\n",
-    "                      samples_sheet='TAB 5 DO NOT EDIT - TEST Met',\n",
+    "                      samples_sheet='TAB 6 TEST',\n",
     "                      write_sts=True)"
    ]
   },
@@ -159,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22d81bf3",
+   "id": "9259b231",
    "metadata": {},
    "outputs": [],
    "source": []
