--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -109,7 +109,7 @@
    "outputs": [],
    "source": [
     "def fix_date_formats(df):\n",
-    "    # time can be appended to date by conversion to string\n",
+    "    # time can be appended to date by conversion to string in pd.read_excel\n",
     "    # fixing date formats appearing due to string conversion on reading\n",
     "    logging.debug('fixing date formats by removing appended times')\n",
     "    \n",
@@ -132,12 +132,16 @@
     "    \n",
     "    version_evidence = {}\n",
     "    \n",
+    "    # columns in v3, not in v2\n",
     "    for col in ('CATCH_SOLUTION', 'AMOUNT_OF_CATCH_PLATED'):\n",
     "        if col in df.columns:\n",
     "            version_evidence[col] = 'v3'\n",
     "        else:\n",
     "            version_evidence[col] = 'v2'\n",
     "            \n",
+    "    # IDENTIFIER_AFFILIATION in v2, not in v3 - not checking as dropped from output\n",
+    "    \n",
+    "    # blank samples conventions\n",
     "    v3_plate_only = (('PLATE_ONLY_1_BLANK' in df['TUBE_OR_WELL_ID']) \n",
     "                     or ('PLATE_ONLY_2_BLANKS' in df['TUBE_OR_WELL_ID']))\n",
     "    if 'PLATE_ONLY' in df['TUBE_OR_WELL_ID']:\n",
@@ -148,7 +152,8 @@
     "            version_evidence['PLATE_ONLY'] = 'v2'\n",
     "    elif v3_plate_only:\n",
     "        version_evidence['PLATE_ONLY'] = 'v3'\n",
-    "        \n",
+    "    \n",
+    "    # conflicting evidence\n",
     "    if len(set(version_evidence.values())) > 1:\n",
     "        msg = 'found conflicting evidence on bioscan version: '\n",
     "        for k, v in version_evidence.items():\n",
@@ -269,7 +274,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def check_columns(df, template_df, bioscan_version='v2', optional_columns=['MISC_METADATA']):\n",
+    "def check_columns(df, template_df, bioscan_version='v3', optional_columns=['MISC_METADATA']):\n",
     "    \n",
     "    logging.debug('checking manifest columns against template')\n",
     "    \n",
@@ -277,10 +282,11 @@
     "    template_cols = set(template_df.columns)\n",
     "    optional_cols = set(optional_columns)\n",
     "    \n",
-    "    # while template is v2, we need to adjust columns to match v3\n",
-    "    if bioscan_version == 'v3':\n",
-    "        template_cols.update(['CATCH_SOLUTION', 'AMOUNT_OF_CATCH_PLATED'])\n",
-    "        template_cols.remove('IDENTIFIER_AFFILIATION')\n",
+    "    # assuming validation against v3 template\n",
+    "    if bioscan_version == 'v2':\n",
+    "        template_cols.remove('CATCH_SOLUTION')\n",
+    "        template_cols.remove('AMOUNT_OF_CATCH_PLATED')\n",
+    "        template_cols.update(['IDENTIFIER_AFFILIATION'])\n",
     "        \n",
     "    if data_cols - template_cols != set():\n",
     "        logging.info(f'extra columns in filled manifest compared to template: {data_cols - template_cols}')\n",
@@ -446,7 +452,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def validate_plates_wells(df, contrib_df, plate_col='RACK_OR_PLATE_ID', well_col='TUBE_OR_WELL_ID', bioscan=False):\n",
+    "def validate_plates_wells(df, contrib_df, plate_col='RACK_OR_PLATE_ID', well_col='TUBE_OR_WELL_ID', \n",
+    "                          bioscan=False, bioscan_version='v3'):\n",
     "    \n",
     "    bioscan_partners_fn = '../data/bioscan_partners.tsv'\n",
     "    \n",
@@ -490,15 +497,23 @@
     "    row_id = list('ABCDEFGH')\n",
     "    col_id = range(1,13)\n",
     "    expected_wells = [r + str(c) for (r,c) in itertools.product(row_id, col_id)]\n",
+    "    \n",
+    "    # different plate-only values across bioscan versions\n",
+    "    if bioscan_version == 'v2':\n",
+    "        plate_only_vals = ['PLATE_ONLY']\n",
+    "    elif bioscan_version == 'v3':\n",
+    "        plate_only_vals = ['PLATE_ONLY_1_BLANK','PLATE_ONLY_2_BLANKS']\n",
+    "    else:\n",
+    "        raise ValueError(f'unhandled bioscan version {bioscan_version} at validate_plates_wells()') \n",
     "        \n",
     "    for plate, pdf in df.groupby(plate_col):\n",
     "        \n",
-    "        if bioscan and (pdf[well_col] == 'PLATE_ONLY').any():\n",
+    "        if bioscan and (pdf[well_col].isin(plate_only_vals)).any():\n",
     "            logging.debug(f'skipping well validation for PLATE_ONLY plate {plate}')\n",
     "            continue\n",
     "        \n",
     "        # check for well duplicates\n",
-    "        dup_wells =  pdf[well_col].duplicated()\n",
+    "        dup_wells = pdf[well_col].duplicated()\n",
     "        if dup_wells.any():\n",
     "            logging.error(f'duplicate {well_col} for plate {plate}: {pdf.loc[dup_wells, well_col].unique()}')\n",
     "        # check for non A1...H12 wells\n",
@@ -555,7 +570,7 @@
     "                                  f'extracting metadata from first row only')\n",
     "                plate_only_val = pdf[well_col].iloc[0]\n",
     "                logging.info(f'found {plate_only_val} plate {plate}, expanding to 96 well rows, '\n",
-    "                             f'keeping {\", \".join(blank_wells[plate_only_val])} blank')\n",
+    "                             f'keeping {\" and \".join(blank_wells[plate_only_val])} blank')\n",
     "                # expand to 96 rows\n",
     "                pdf = pd.DataFrame(pdf.iloc[0] for i in range(len(expected_wells)))\n",
     "                pdf[well_col] = expected_wells\n",
@@ -674,10 +689,30 @@
     "            logging.warning(msg)\n",
     "        elif level == 'e':\n",
     "            logging.error(msg)\n",
+    "            \n",
     "#     else:\n",
     "#         logging.info('all values valid in {!r}'.format(col))\n",
     "            \n",
     "# validate_values('ORGANISM_PART', df, valid_dict, sep=\" | \", na_values=[], level='e')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def strip_asterisks(col, df):\n",
+    "\n",
+    "    series = df[col]\n",
+    "    asterisk_to_strip = (series.str.startswith(\"*\") & series.str.endswith(\"*\"))\n",
+    "    if asterisk_to_strip.any():\n",
+    "        asterisk_series = index_ranges(series[asterisk_to_strip])\n",
+    "        logging.warning(f'{col} column, SERIES {asterisk_series}: '\n",
+    "                        f'stripping asterisks from {series[asterisk_to_strip].unique()}')\n",
+    "        series = series.str.strip('*')\n",
+    "    df[col] = series\n",
+    "    return df"
    ]
   },
   {
