add filename validation

--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -53,7 +53,8 @@
     "\n",
     "    # orange cols\n",
     "    validate_regex('CATCH_LOT', df, na_values=[])\n",
-    "    df, gal = validate_plates_wells(df, contrib_df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID', bioscan=True)\n",
+    "    df, gal, partner_code = validate_plates_wells(\n",
+    "        df, contrib_df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID', bioscan=True)\n",
     "    # check and exclude blanks\n",
     "    is_blank = check_blanks(df)\n",
     "    if df[~is_blank].shape[0] == 0:\n",
@@ -106,6 +107,7 @@
     "    validate_freetext('OTHER_INFORMATION', df)\n",
     "    validate_freetext('MISC_METADATA', df)\n",
     "    validate_identifier('IDENTIFIED_BY', df, contrib_df, na_values=[''])\n",
+    "    validate_input_filename(fn, partner_code, v)\n",
     "    \n",
     "    df = expand_plate_only(df)\n",
     "    df = add_sts_cols(df, contrib_df, gal, bioscan=True, v=v)\n",
@@ -166,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9259b231",
+   "id": "5ae435ce",
    "metadata": {},
    "outputs": [],
    "source": []
