--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -489,6 +489,7 @@
     "    else:\n",
     "        # anospp\n",
     "        unknown_prefixes = (~plate_prefixes.isin(contrib_df['PARTNER_CODE']))\n",
+    "        selected_partner_code = 'SANG'\n",
     "        gal = \"Sanger Institute\"\n",
     "    if unknown_prefixes.any():\n",
     "        logging.error(f'plate ID prefixes not recognised for {plates[unknown_prefixes].to_list()}')\n",
@@ -532,7 +533,7 @@
     "    logging.info(f'{df.shape[0]} samples found across {df[plate_col].nunique()} plates')\n",
     "    \n",
     "\n",
-    "    return df, gal\n",
+    "    return df, gal, selected_partner_code\n",
     "        \n",
     "# df = validate_plates_wells(df, contrib_df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID')"
    ]
@@ -1150,6 +1151,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def validate_input_filename(input_fn, partner_code, bioscan_version):\n",
+    "    \n",
+    "    # ABCD_YYMM_\n",
+    "    v = bioscan_version.strip('v')\n",
+    "    fn_regex = f'^{partner_code}_(2[0-3])(0[1-9]|1[0-2])_BIOSCAN_Manifest_V{v}.*xlsx$'\n",
+    "    \n",
+    "    fn_basename = os.path.basename(input_fn)\n",
+    "    \n",
+    "    if not re.match(fn_regex, fn_basename):\n",
+    "        logging.warning(f'input filename {fn_basename} does not match '\n",
+    "                        f'{partner_code}_YYMM_BIOSCAN_Manifest_V{v}*xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def add_sts_cols(df, contrib_df, gal, bioscan=True, v='v2'):\n",
     "    \n",
     "    logging.debug('adding STS columns to manifest')\n",
@@ -1194,6 +1214,13 @@
     "\n",
     "# add_sts_cols(df, contrib_df, gal='Sanger Institute');"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
